add_executable(xrabin32 xrabin.c)
SET_PROPERTY(TARGET xrabin32 APPEND PROPERTY COMPILE_DEFINITIONS "XRAB_WORD_TYPE=int")
SET_PROPERTY(TARGET xrabin32 APPEND PROPERTY COMPILE_DEFINITIONS "XRAB_WORD_PFMT=\"0x%x\"")

add_executable(xrabin64 xrabin.c)
SET_PROPERTY(TARGET xrabin64 APPEND PROPERTY COMPILE_DEFINITIONS "XRAB_WORD_TYPE=long long")
SET_PROPERTY(TARGET xrabin64 APPEND PROPERTY COMPILE_DEFINITIONS "XRAB_WORD_PFMT=\"0x%llx\"")
